2011-01-03  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/47148
	* ipa-split.c (split_function): Convert arguments to
	DECL_ARG_TYPE if possible.

	PR tree-optimization/47155
	* tree-ssa-ccp.c (bit_value_binop_1): Use r1type instead of type
	when computing uns.

	PR rtl-optimization/47157
	* combine.c (try_combine): If undobuf.other_insn becomes
	(set (pc) (pc)) jump, call update_cfg_for_uncondjump on it
	and set *new_direct_jump_p too.

2011-01-03  Sebastian Pop  <sebastian.pop@amd.com>

	PR tree-optimization/47021
	* graphite-sese-to-poly.c (scan_tree_for_params): Handle ADDR_EXPR.

2011-01-03  Jakub Jelinek  <jakub@redhat.com>

	* gcc.c (process_command): Update copyright notice dates.
	* gcov.c (print_version): Likewise.
	* gcov-dump.c (print_version): Likewise.
	* mips-tfile.c (main): Likewise.
	* mips-tdump.c (main): Likewise.

2011-01-03  Martin Jambor  <mjambor@suse.cz>

	PR tree-optimization/46801
	* tree-sra.c (type_internals_preclude_sra_p): Check whether
	aggregate fields start at byte boundary instead of the bit-field flag.

2011-01-03  H.J. Lu  <hongjiu.lu@intel.com>

	PR driver/47137
	* gcc.c (main): Revert revision 168407.

2011-01-03  Martin Jambor  <mjambor@suse.cz>

	* lto-cgraph.c (input_cgraph_opt_section): Use the correct section type.

2011-01-03  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>

	* tree-vect-generic.c (expand_vector_operations_1): When using vector/
	vector optab to expand vector/scalar shift, update gimple to vector.

2011-01-03  Martin Jambor  <mjambor@suse.cz>

	* cgraphunit.c (verify_cgraph_node): Verify there is no direct call to
	a thunk.

2011-01-03  Martin Jambor  <mjambor@suse.cz>

	PR tree-optimization/46984
	* cgraph.h (cgraph_indirect_call_info): make field thunk_delta
	HOST_WIDE_INT.
	(cgraph_create_indirect_edge): Fixed line length.
	(cgraph_indirect_call_info): Declare.
	(cgraph_make_edge_direct) Update declaration.
	* cgraph.c (cgraph_allocate_init_indirect_info): New function.